added a script to generate the index page for articles. and also a home page.

--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en, lv">
 <head>
-    <link rel="stylesheet" href="../static/style.css">
-    <title>$title$</title>
+    <link rel="stylesheet" href="static/style.css">
+    <title>airshipHave’s site</title>
     <link rel="icon" type="image/x-icon" href="static/favicon.png">
 </head>
 
@@ -17,10 +17,14 @@
       <a href="#a">about</a>
     <a href="index.html">index</a>
     </header>
-    $body$
+    <h1 id="airshiphaves-site">airshipHave’s site</h1>
+    <h2 id="todo">TODO</h2>
+    <p>check out <a href="articles/benchmark.html">the visual
+    benchmark</a></p>
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
-      <p>the date of publication of "$title$" was in $date$</p>
+      <p>the date of publication of "airshipHave’s
+site" was in 423487978</p>
       <a href="https://dimden.dev/"><img src="https://dimden.dev/images/88x31.gif"></a>
     </footer>    
   </body>
