--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <header>
     
-      <a href="#a">about</a>
-    <a href="index.html">index</a>
+      <a href="index.html">home</a>
+    <a href="articles/index.html">index</a>
     </header>
     <h1 id="airshiphaves-site">airshipHave’s site</h1>
     <h2 id="todo">TODO</h2>
