--- a/static/template.html
+++ b/static/template.html
@@ -13,16 +13,20 @@
 <main>
   <body>
     <header>
-    
-      <a href="#a">about</a>
-    <a href="index.html">index</a>
+      
     </header>
-    $body$
+    <nav>
+      <ul>
+        <li><a href="index.html">article index</a></li>
+        <li><a href="home.html">home</a></li>
+      </ul>
+    </nav>
+    $body$    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
-      <p>the date of publication of "$title$" was in $date$</p>
-      <a href="https://dimden.dev/"><img src="https://dimden.dev/images/88x31.gif"></a>
-    </footer>    
+      <!-- <p>the date of publication of "$title$" was in $date$</p> -->
+      <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a>
+    </footer>
   </body>
 </main>
 </html>
