--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en, lv">
 <head>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="static/style.css">
     <title>airshipHave’s site</title>
     <link rel="icon" type="image/x-icon" href="static/favicon.png">
 </head>
@@ -17,7 +17,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html">article index</a></li>
+        <li><a href="articles/index.html">article index</a></li>
         <li><a href="home.html">home</a></li>
       </ul>
     </nav>
