--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <ul>
         <li><a href="articles/index.html">article index</a></li>
-        <li><a href="home.html">home</a></li>
+        <li><a href="index.html">home</a></li>
       </ul>
     </nav>
     <h1 id="airshiphaves-site">airshipHave’s site</h1>
