--- a/static/template.html
+++ b/static/template.html
@@ -18,7 +18,7 @@
     <nav>
       <ul>
         <li><a href="index.html">article index</a></li>
-        <li><a href="home.html">home</a></li>
+        <li><a href="../index.html">home</a></li>
       </ul>
     </nav>
     $body$    
