--- a/static/template.html
+++ b/static/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en, lv">
 <head>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <title>$title$</title>
     <link rel="icon" type="image/x-icon" href="static/favicon.png">
 </head>
