--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en, lv">
 <head>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <title>airshipHave’s site</title>
-    <link rel="icon" type="image/x-icon" href="static/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/static/favicon.png">
 </head>
 
 
@@ -17,13 +17,12 @@
     </header>
     <nav>
       <ul>
-        <li><a href="articles/index.html">article index</a></li>
-        <li><a href="index.html">home</a></li>
+        <li><a href="/articles/index.html">article index</a></li>
+        <li><a href="/index.html">home</a></li>
       </ul>
     </nav>
-    <h1 id="airshiphaves-site">airshipHave’s site</h1>
-<h2 id="todo">TODO</h2>
-<p>Hello</p>    
+    <h1 id="welcome">Welcome</h1>
+<p>this site is WIP, but do check out links at the navbar!</p>    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
       <!-- <p>the date of publication of "airshipHave’s
