--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
       </ul>
     </nav>
     <h1 id="welcome">Welcome</h1>
-<p>this site is WIP, but do check out links at the navbar!</p>    
+<p>this site is WIP, but do check out links at the navbar!</p>
+<h2 id="links">links</h2>
+<ul>
+<li><a href="https://twitter.com/airshipHave"><img src="/static/twitter.png"></a></li>
+</ul>    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
       <!-- <p>the date of publication of "airshipHave’s
