--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <main>
   <body>
     <header>
-      
+      <div class="rightHeader">
+        <img src="/static/twitter.png" alt="">
+      </div>
     </header>
     <nav>
       <ul>
@@ -22,11 +24,7 @@
       </ul>
     </nav>
     <h1 id="welcome">Welcome</h1>
-<p>this site is WIP, but do check out links at the navbar!</p>
-<h2 id="links">links</h2>
-<ul>
-<li><a href="https://twitter.com/airshipHave"><img src="/static/twitter.png"></a></li>
-</ul>    
+<p>this site is WIP, but do check out links at the navbar!</p>    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
       <!-- <p>the date of publication of "airshipHave’s
