lang  value in html tag was invalid, i changed it to "en"

--- a/static/template.html
+++ b/static/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en, lv">
+<html lang="en">
 <head>
     <link rel="stylesheet" href="/static/style.css">
     <title>$title$</title>
