--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en, lv">
+<html lang="en">
 <head>
     <link rel="stylesheet" href="/static/style.css">
     <title>airshipHave’s site</title>
@@ -7,7 +7,7 @@
 </head>
 
 
-</div> 
+ 
 
 
 <main>
@@ -27,7 +27,7 @@
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
       <!-- <p>the date of publication of "airshipHave’s
 site" was in </p> -->
-      <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a>
+     <!-- <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> -->
     </footer>
   </body>
 </main>
