--- a/images.html
+++ b/images.html
@@ -19,6 +19,7 @@
       <ul>
         <li><a href="/articles/index.html">article index</a></li>
         <li><a href="/index.html">home</a></li>
+        <li><a href="/images.html">Images</a></li>
       </ul>
     </nav>
     <h1 id="images">Images</h1>
