--- a/images.html
+++ b/images.html
@@ -35,7 +35,7 @@ Flag of Daugava with an additional Belarusian stripe.
 </p>
 </article>
 <article>
-<img src="static/images/anglophoneFlag" alt="Flag of the anglophone world">
+<img src="static/images/anglophoneFlag.png" alt="Flag of the anglophone world">
 <h3>
 Flag of Belaro-Daugava SSR
 </h3>
