--- a/images.html
+++ b/images.html
@@ -37,28 +37,28 @@ Flag of Daugava with an additional Belarusian stripe.
 <article>
 <img src="static/images/anglophoneFlag.png" alt="Flag of the anglophone world">
 <h3>
-Flag of Belaro-Daugava SSR
+Flag of the anglophone world
 </h3>
 <p>
-Flag of the anglophone world
+combination of USA, Nigerian, Indian and Pakistani flags
 </p>
 </article>
 <article>
 <img src="static/images/daugva.png" alt="1">
 <h3>
-Flag of Belaro-Daugava SSR
+Territorial divisions of Daugava
 </h3>
 <p>
-Flag of Daugava with an additional Belarusian stripe.
+The divisions are based on river basin borders.
 </p>
 </article>
 <article>
 <img src="static/images/twitter.png" alt="redesign of the twitter logo">
 <h3>
-Flag of Belaro-Daugava SSR
+Twitter
 </h3>
 <p>
-Redesign of the twitter logo
+Redesign of the Twitter logo
 </p>
 </article>
 <article>
@@ -73,7 +73,7 @@ Latvian Lyndon LaRouche agrees.
 <article>
 <img src="static/images/flagOfLithoBelarus.png" alt="1">
 <h3>
-Flag of Belaro-Daugava SSR
+Flag of Belarus and Eastern Lithuania
 </h3>
 <p>
 Flag of Lithuania-Belarus which combines the flag of Belarus and the
@@ -83,64 +83,47 @@ Lithuanian SSR
 <article>
 <img src="static/images/infoboxWithCountry.png" alt="1">
 <h3>
-Flag of Belaro-Daugava SSR
+Infobox of Daugava SSR
 </h3>
 <p>
-Flag of Daugava with an additional Belarusian stripe.
-</p>
-</article>
-<article>
-<img src="static/images/daugva.png" alt="1">
-<h3>
-Flag of Belaro-Daugava SSR
-</h3>
-<p>
-Flag of Daugava with an additional Belarusian stripe.
-</p>
-</article>
-<article>
-<img src="static/images/lithoBelarus.png" alt="1">
-<h3>
-Flag of Belaro-Daugava SSR
-</h3>
-<p>
-Flag of Daugava with an additional Belarusian stripe.
+Wikipedia-style infobox of Daugava
 </p>
 </article>
 <article>
 <img src="static/images/sorbingtime.png" alt="1">
 <h3>
-Flag of Belaro-Daugava SSR
+Map and flag of Sorbo-Czecho-Slovak republic
 </h3>
 <p>
-Flag of Daugava with an additional Belarusian stripe.
+Czechoslovakia + Sorbs
 </p>
 </article>
 <article>
 <img src="static/images/sorbingtime2.png" alt="1">
 <h3>
-Flag of Belaro-Daugava SSR
+Map of Czecho-Sorbia
 </h3>
 <p>
-Flag of Daugava with an additional Belarusian stripe.
+Slovakia seceded.
 </p>
 </article>
 <article>
 <img src="static/images/wavyIskolatWithRiver.png" alt="1">
 <h3>
-Flag of Belaro-Daugava SSR
+Flag of wavy Latvian SSR
 </h3>
 <p>
-Flag of Daugava with an additional Belarusian stripe.
+Remix of the latvian SSR flag
 </p>
 </article>
 <article>
 <img src="static/images/wavyIskolatWithStar.png" alt="1">
 <h3>
-Flag of Belaro-Daugava SSR
+Flag of Latvian SSR
 </h3>
 <p>
-Flag of Daugava with an additional Belarusian stripe.
+Incorporation of various elements in the Iskolat flag into Latvian SSR
+flag
 </p>
 </article>
 </main>    
