--- a/images.html
+++ b/images.html
@@ -23,7 +23,8 @@
       </ul>
     </nav>
     <h1 id="images">Images</h1>
-<p>Here’s a catalogue of some images I’ve made.</p>
+<p>Here’s a catalogue of some images I’ve made in no particular
+order.</p>
 <main class="catalog">
 <article>
 <img src="static/images/alt_lssrAndBelarus.png" alt="1">
@@ -124,6 +125,15 @@ Flag of Latvian SSR
 <p>
 Incorporation of various elements in the Iskolat flag into Latvian SSR
 flag
+</p>
+</article>
+<article>
+<img src="static/images/czechosorbianFlag.png" alt="1">
+<h3>
+Flag of Latvian SSR
+</h3>
+<p>
+Flag of Czecho-Sorbia.
 </p>
 </article>
 </main>    
