--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </ul>
     </nav>
     <h1 id="welcome">Welcome</h1>
-<p>this site is WIP, but do check out links at the navbar!</p>    
+<p>this site is WIP, but do check out links at the navbar!</p>
+<p><navbar class="bartoright"> Test. </navbar></p>    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
       <!-- <p>the date of publication of "airshipHave’s
