--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <main>
   <body>
     <header>
-      
+     <a href="/index.html"><img src="/static/header.png" alt="Header of site: airshipHave"></a> 
     </header>
     <nav>
       <ul>
@@ -23,13 +23,11 @@
       </ul>
     </nav>
     <h1 id="welcome">Welcome</h1>
-<p>this site is WIP, but do check out links at the navbar!</p>
-<p><navbar class="bartoright"> Test. </navbar></p>    
+<p>this site is WIP, but do check out links at the navbar!</p>    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
-      <!-- <p>the date of publication of "airshipHave’s
-site" was in </p> -->
-     <!-- <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> -->
+       <p>the date of publication of "airshipHave’s site" was in </p> 
+      <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> 
     </footer>
   </body>
 </main>
