--- a/static/template.html
+++ b/static/template.html
@@ -13,7 +13,7 @@
 <main>
   <body>
     <header>
-      
+     <a href="/index.html"><img src="/static/header.png" alt="Header of site: airshipHave"></a> 
     </header>
     <nav>
       <ul>
@@ -25,8 +25,8 @@
     $body$    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
-      <!-- <p>the date of publication of "$title$" was in $date$</p> -->
-     <!-- <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> -->
+       <p>the date of publication of "$title$" was in $date$</p> 
+      <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> 
     </footer>
   </body>
 </main>
