--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <p>this site is WIP, but do check out links at the navbar!</p>    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
-       <p>the date of publication of "airshipHave’s site" was in </p> 
+       <!--<p>the date of publication of "airshipHave’s
+site" was in </p> -->
       <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> 
     </footer>
   </body>
