--- a/static/template.html
+++ b/static/template.html
@@ -24,7 +24,7 @@
     $body$    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
-       <p>the date of publication of "$title$" was in $date$</p> 
+       <!--<p>the date of publication of "$title$" was in $date$</p> -->
       <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> 
     </footer>
   </body>
