--- a/static/template.html
+++ b/static/template.html
@@ -13,6 +13,7 @@
 <main>
   <body>
     <header>
+
     </header>
     <nav>
       <ul>
@@ -25,7 +26,7 @@
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
        <!--<p>the date of publication of "$title$" was in $date$</p> -->
-      <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> 
+      <!--<a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> -->
     </footer>
   </body>
 </main>
