--- a/images.html
+++ b/images.html
@@ -140,7 +140,7 @@ Flag of Czecho-Sorbia.
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
        <!--<p>the date of publication of "Images" was in </p> -->
-      <!--<a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> -->
+      <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> 
     </footer>
   </body>
 </main>
