--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
        <!--<p>the date of publication of "airshipHave’s
 site" was in </p> -->
-      <!--<a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> -->
+      <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> 
     </footer>
   </body>
 </main>
