--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <h1 id="welcome">Welcome</h1>
 <p>this site is WIP, but do check out links at the navbar!</p>
-<aside class="aside">
+<aside class="links">
 Test
 </aside>    
     <footer>
