--- a/images.html
+++ b/images.html
@@ -22,6 +22,9 @@
         <li><a href="/images.html">Images</a></li>
       </ul>
     </nav>
+      <nav class="links">
+        
+      </nav>
     <h1 id="images">Images</h1>
 <p>Here’s a catalogue of some images I’ve made in no particular
 order.</p>
