--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <li><a href="/images.html">Images</a></li>
       </ul>
     </nav>
+      <nav class="links">
+        
+      </nav>
     <h1 id="welcome">Welcome</h1>
 <p>this site is WIP, but do check out links at the navbar!</p>    
     <footer>
