--- a/static/template.html
+++ b/static/template.html
@@ -22,6 +22,9 @@
         <li><a href="/images.html">Images</a></li>
       </ul>
     </nav>
+      <nav class="links">
+        
+      </nav>
     $body$    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
