--- a/images.html
+++ b/images.html
@@ -23,7 +23,7 @@
       </ul>
     </nav>
       <nav class="links">
-        
+      hmm. 
       </nav>
     <h1 id="images">Images</h1>
 <p>Here’s a catalogue of some images I’ve made in no particular
