--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
     </nav>
       <nav class="links">
-        
+      hmm. 
       </nav>
     <h1 id="welcome">Welcome</h1>
 <p>this site is WIP, but do check out links at the navbar!</p>    
