--- a/images.html
+++ b/images.html
@@ -23,7 +23,10 @@
       </ul>
     </nav>
       <nav class="links">
-      hmm. 
+      hmm.
+        <ul>
+          <li><a href="https://twitter.com/airshiphave"><img src="/static/images/twitter.png" alt=""></a></li>
+        </ul>
       </nav>
     <h1 id="images">Images</h1>
 <p>Here’s a catalogue of some images I’ve made in no particular
