--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       </ul>
     </nav>
       <nav class="links">
-      hmm. 
+      hmm.
+        <ul>
+          <li><a href="https://twitter.com/airshiphave"><img src="/static/images/twitter.png" alt=""></a></li>
+        </ul>
       </nav>
     <h1 id="welcome">Welcome</h1>
 <p>this site is WIP, but do check out links at the navbar!</p>    
