--- a/static/template.html
+++ b/static/template.html
@@ -23,7 +23,10 @@
       </ul>
     </nav>
       <nav class="links">
-      hmm. 
+      hmm.
+        <ul>
+          <li><a href="https://twitter.com/airshiphave"><img src="/static/images/twitter.png" alt=""></a></li>
+        </ul>
       </nav>
     $body$    
     <footer>
