--- a/images.html
+++ b/images.html
@@ -25,7 +25,7 @@
       <nav class="links">
       hmm.
         <ul>
-          <li><a href="https://twitter.com/airshiphave"><img src="/static/images/twitter.png" alt=""></a></li>
+          <li><a href="https://twitter.com/airshiphave"><img src="/static/logos/twitter.png" alt=""></a></li>
         </ul>
       </nav>
     <h1 id="images">Images</h1>
