--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     <a href="/index.html">home</a>
     <a href="/images.html">images</a>
     </nav>
-      <nav class="links">
-        <ul>
-          <li><a href="https://twitter.com/airshiphave"><img src="/static/logos/twitter.png" alt=""></a></li>
-        </ul>
+      <nav class="links">        
+      <a href="https://twitter.com/airshiphave"><img src="/static/logos/twitter.png" alt=""></a>
+        
       </nav>
     <h1 id="welcome">Welcome</h1>
 <p>this site is WIP, but do check out links at the navbar!</p>    
