--- a/static/template.html
+++ b/static/template.html
@@ -25,10 +25,9 @@
     <a href="/index.html">home</a>
     <a href="/images.html">images</a>
     </nav>
-      <nav class="links">
-        <ul>
-          <li><a href="https://twitter.com/airshiphave"><img src="/static/logos/twitter.png" alt=""></a></li>
-        </ul>
+      <nav class="links">        
+      <a href="https://twitter.com/airshiphave"><img src="/static/logos/twitter.png" alt=""></a>
+        
       </nav>
     $body$    
     <footer>
