--- a/images.html
+++ b/images.html
@@ -80,7 +80,7 @@ Latvian Lyndon LaRouche agrees.
 </p>
 </article>
 <article>
-<img src="static/images/flagOfLithoBelarus.png" alt="1">
+<p><img src="static/images/flagOfLithoBelarus.png" alt="1"></p>
 <h3>
 Flag of Belarus and Eastern Lithuania
 </h3>
@@ -113,7 +113,7 @@ Czechoslovakia + Sorbs
 Map of Czecho-Sorbia
 </h3>
 <p>
-Slovakia seceded.
+Slovakia seceded. Very unfortunate.
 </p>
 </article>
 <article>
@@ -122,7 +122,8 @@ Slovakia seceded.
 Flag of wavy Latvian SSR
 </h3>
 <p>
-Remix of the latvian SSR flag
+Remix of the latvian SSR flag. The Blue wavy stripe represents the river
+of Daugava
 </p>
 </article>
 <article>
@@ -138,10 +139,10 @@ flag
 <article>
 <img src="static/images/czechosorbianFlag.png" alt="1">
 <h3>
-Flag of Latvian SSR
+Flag of Cze
 </h3>
 <p>
-Flag of Czecho-Sorbia.
+Flag of Czecho-Sorbia. Just a combo of Czech and the historic Sorb flag
 </p>
 </article>
 </main>    
