--- a/static/template.html
+++ b/static/template.html
@@ -29,6 +29,7 @@
       <a href="https://twitter.com/airshiphave"><img src="/static/logos/twitter.svg" alt="twitter"></a>
       <a href="https://letterboxd.com/aquapopulist"><img src="/static/logos/letterboxd.svg" alt="letterboxd"></a>
        <a href="https://www.pinterest.com/IsolatedPopulism"><img src="/static/logos/pinterest.png" alt="pinterest"></a> 
+        <a href="https://draugiem.lv"><img src="/static/logos/draugiem.png" alt="draugiem.lv"></a>
       </nav>
     $body$    
     <footer>
