--- a/dmMe.html
+++ b/dmMe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="/static/style.css">
-    <title></title>
+    <title>DM me for the handle</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.png">
 </head>
 
@@ -34,16 +34,11 @@
         <a href="/dmMe.html"><img src="/static/logos/youtube.svg" alt="YouTube"></a>
         <a href="/dmMe.html"><img src="/static/logos/discord.svg" alt="discord"></a>
       </nav>
-    <h1 id="index-of-articles">Index of articles</h1>
-<ul>
-<li><a
-href="2024-10-26-benchmarking%20the%20look.html">2024-10-26-benchmarking
-the look</a></li>
-<li><a href="index.html">index</a></li>
-</ul>    
+    <p>DM me for the relevant link</p>    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
-       <!--<p>the date of publication of "" was in </p> -->
+       <!--<p>the date of publication of "DM me for the
+handle" was in </p> -->
       <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a> 
     </footer>
   </body>
