--- a/images.html
+++ b/images.html
@@ -149,6 +149,14 @@ Flag of Cze
 Flag of Czecho-Sorbia. Just a combo of Czech and the historic Sorb flag
 </p>
 </article>
+<img src="static/images/marxistsDotOrg.png" alt="1">
+<h3>
+marxists.org Wrapped 2024
+</h3>
+<p>
+My marxists.org stats for 2024.
+</p>
+</article>
 </main>    
     <footer>
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
