--- a/images.html
+++ b/images.html
@@ -149,6 +149,7 @@ Flag of Cze
 Flag of Czecho-Sorbia. Just a combo of Czech and the historic Sorb flag
 </p>
 </article>
+<article>
 <img src="static/images/marxistsDotOrgWrapped.png" alt="1">
 <h3>
 marxists.org Wrapped 2024
