--- a/dmMe.html
+++ b/dmMe.html
@@ -33,6 +33,13 @@
         <a href="https://x.com/airshiphave"><img src="/static/logos/x.svg" alt="X"></a>
         <a href="/dmMe.html"><img src="/static/logos/youtube.svg" alt="YouTube"></a>
         <a href="/dmMe.html"><img src="/static/logos/discord.svg" alt="discord"></a>
+        <a href="/dmMe.html"><img src="/static/logos/steam.png" alt="steam"></a>
+        <a href="/dmMe.html"><img src="/static/logos/vk.png" alt="VK"></a>
+        <a href="/dmMe.html"><img src="/static/logos/tiktok.svg" alt="TikTok"></a>
+        <a href="/dmMe.html"><img src="/static/logos/facebook.png" alt="Facebook"></a>
+        <a href="/dmMe.html"><img src="/static/logos/wechat.png" alt="wechat"></a>
+        <a href="/dmMe.html"><img src="/static/logos/xiaohongshu.png" alt="Xiaohongshu"></a>
+
       </nav>
     <p>DM me for the relevant link</p>    
     <footer>
