--- a/dmMe.html
+++ b/dmMe.html
@@ -39,6 +39,7 @@
         <a href="/dmMe.html"><img src="/static/logos/facebook.png" alt="Facebook"></a>
         <a href="/dmMe.html"><img src="/static/logos/wechat.png" alt="wechat"></a>
         <a href="/dmMe.html"><img src="/static/logos/xiaohongshu.png" alt="Xiaohongshu"></a>
+        <a href="https://airshiphave.straw.page"><img src="/static/logos/strawpage.png" alt="strawpage"></a>
 
       </nav>
     <p>DM me for the relevant link</p>    
