--- a/dmMe.html
+++ b/dmMe.html
@@ -50,6 +50,7 @@
 handle" was in </p> -->
       <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a>
       <a href="https://awayfromairships.github.io/"><img src="/static/8831s/airshipHave.png" alt=" "></a>
+      <a href=""><img src="/static/8831s/500.png" alt=" "></a>
     </footer>
   </body>
 </main>
