--- a/static/template.html
+++ b/static/template.html
@@ -49,7 +49,7 @@
        <!--<p>the date of publication of "$title$" was in $date$</p> -->
       <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a>
       <a href="https://awayfromairships.github.io/"><img src="/static/8831s/airshipHave.png" alt=" "></a>
-      <a href=""><img src="/static/8831s/500.png" alt=" "></a>
+      <img src="/static/8831s/500.png" alt=" ">
     </footer>
   </body>
 </main>
