--- a/dmMe.html
+++ b/dmMe.html
@@ -48,6 +48,7 @@
       <p>This site is licensed under aGPLv3 unless otherwise noted.</p>
        <!--<p>the date of publication of "DM me for the
 handle" was in </p> -->
+       <img src="/static/8831s/uhh.gif" alt=" "> 
       <a href="https://eightyeightthirty.one/"><img src="https://raw.githubusercontent.com/NotNite/eightyeightthirtyone/main/client/public/88x31.png"></a>
       <a href="https://awayfromairships.github.io/"><img src="/static/8831s/airshipHave.png" alt=" "></a>
       <img src="/static/8831s/500.png" alt=" ">
